--- a/src/views/house/z-house/edit.html
+++ b/src/views/house/z-house/edit.html
@@ -288,7 +288,7 @@ img {
                          <select name="sign" lay-verify="" id="sign">
                                 <option value="{{d[1].sign}}">{{parsesign(d[1].sign)}}</option>
                                  <option value="3">转租</option>
-                              
+                                 <option value="4">新房</option>
                          </select>  
                     </div> 
                    </div> 
