--- a/src/views/house/h-house/edit.html
+++ b/src/views/house/h-house/edit.html
@@ -219,7 +219,8 @@ img {
                     <div class="layui-input-inline"> 
                          <select name="sign" lay-verify="" id="sign">
                                  <option value="{{d[1].sign}}">{{parsesign(d[1].sign)}}</option>
-                                 <option value="3">转租</option>
+                                 <option value="1">转租</option>
+                                 <option value="4">新房</option>
                          </select>  
                     </div> 
                    </div> 
