--- a/src/views/house/z-house/index.html
+++ b/src/views/house/z-house/index.html
@@ -45,7 +45,7 @@
         <script id="demo" type="text/html">
             <div class="m-comtent1">
             <div class="m-wrap-body" >
-            {{# layui.each(d, function(indextop,itemtop){  }}
+            {{# var util = layui.util;layui.each(d, function(indextop,itemtop){  }}
             {{# if(itemtop.Status==2){ }}
             <div class="m-panel-body1" id="panel-body-{{itemtop.Id}}">
                 <div class="m-top m-zt-y" id="m-top">
@@ -55,7 +55,7 @@
                         </li>
                         <li><span>{{formatter(itemtop.Price,"暂未定价")}}</span></li>
                         <li><span>{{formatter(itemtop.Huxing,"户型")}}</span><span>{{formatter(itemtop.Measure,"面积")}}</span><span>{{formatter(itemtop.Orientation,"朝向")}}</span></li>
-                        <li><span>已租</span></li>
+                        <li><span>已租</span><span>{{itemtop.recent}}元/月</span><span>({{itemtop.teantname}})</span> <span> 退:{{util.toDateString(itemtop.endtime.replace(/-/g, '/'), 'yyyy/MM/dd')}}</span></li>
                     </ul>
                     <div class="hover-menu">
                         <div class="layui-btn-group">
