--- a/src/views/liushui/add.html
+++ b/src/views/liushui/add.html
@@ -116,9 +116,14 @@
                                 <label class="layui-form-label">支付类型</label>
                                 <div class="layui-input-inline" style="width: 200px;">
                                         <select name="PayType" lay-verify="" id="PayType">
-                                                     <option value="支付宝">支付宝</option>
-                                                     <option value="微信" >微信</option>
-                                                    
+                                                <option value="">交易方式</option> 
+                                                <option value="现金">支付宝</option>
+                                                <option value="转账">支付宝</option>
+                                                <option value="支付宝">支付宝</option>
+                                                <option value="微信" >微信</option>
+                                                <option value="刷卡">刷卡</option>                          
+                                                <option value="在线支付">在线支付</option>
+                                                <option value="其他">其他</option>
                                          </select>  
                                 </div>
                                 <label class="layui-form-label" >支付时间</label>
