--- a/src/views/house/d-house/index.html
+++ b/src/views/house/d-house/index.html
@@ -17,6 +17,7 @@
         line-height: 20px;
         right: 8px;
         bottom: -15px;
+        z-index: 999;
     }
     .m-top:hover .hover-menu{
         display: block;
@@ -37,6 +38,7 @@
         bottom: 100%;
         min-width: 140px;
         right: 0;
+        background-color: #fff;
     }
     .hover-menu .drop-menu li a{
         display: block;
