--- a/src/views/contract/z-contract/add.html
+++ b/src/views/contract/z-contract/add.html
@@ -722,9 +722,9 @@
                 <div class="layui-form-item">
                      <label class="layui-form-label">杂费</label>
                      <div class="layui-input-block">
-                         {{#  layui.each(d.zafei, function(index, item1){ }}
+                         {{#  layui.each(d.zafei, function(index, item1){ if(item1.IsYajin==0){ }}
                              <input type="checkbox" name="{{item1.Code}}" title="{{item1.Name}}" lay-filter="zafei" ztype="{{item1.Type}}" zyajin="{{item1.IsYajin}}">
-                         {{#  });   }}
+                         {{# } });   }}
                      </div>
                 </div>
                 
